# dotfiles

./: .chezmoidata.toml  .chezmoiexternal.toml  .chezmoiignore  .gitconfig  .gitignore  .tmux.conf  .vimrc  .zshrc  README.md  dot_alias  dot_alias.tmpl  dot_fzf.zsh.tmpl  dot_gitconfig  dot_gitconfig.tmpl  dot_scripts  dot_tmux.conf  dot_vimrc  dot_zshrc  dot_zshrc.tmpl  first_setup.sh  ohmymatheus.zsh-theme
.config/albert/: albert.conf  core.db  core.db-journal
.config/bat/: config
.config/gtk-3.0/: bookmarks  gtk.css
.config/i3/: config
.config/kitty/: kitty.conf  options.conf  theme.conf
.config/nvim/: .netrwhist  init.vim
.doom.d/: config.el  init.el
.oh-my-zsh/themes/: ohmymatheus.zsh-theme
.tmux/: \  keybinds.conf  options.conf  plugins.conf  theme.conf
.vim/: .netrwhist  .vimrc  plug.vim
.vim/config/: nerdtree.vim  rspec.vim  rust.vim  theme.vim  vim-carboon.vim
.vim/ultisnips/: ruby-spec.snippets  ruby.snippets
dot_doom.d/: config.el  custom.el  helpers.el  init.el  keybinds.el  org-config.el  packages.el
dot_oh-my-zsh/themes/: ohmymatheus.zsh-theme
dot_tmux/: keybinds.conf  options.conf  options.conf.tmpl  plugins.conf  theme.conf
dot_tmux/themes/: everforest-light  onedark  onelight
dot_vim/: plug.vim
dot_vim/config/: coc.vim  exercism_run_test.vim  fzf.vim  indent.vim  keybind.vim  theme.vim  vimtmuxrunner.vim
nix/: configuration.nix  flake.nix  hardware-configuration.nix
nix/modules/: fonts.nix  greetd.nix  networking.nix  nvidia.nix  packages.nix  shell.nix  users.nix
nix/pkgs/: desktop.nix  server.nix
private_dot_config/alacritty/: alacritty.toml  alacritty.toml.tmpl  alacritty.yml
private_dot_config/bat/: config
private_dot_config/brewfile/: Brewfile
private_dot_config/crush/: crush.json
private_dot_config/dunst/: dunstrc
private_dot_config/ghostty/: config  switch-theme
private_dot_config/glow/: glow.yml
private_dot_config/hypr/: application-style.conf  hypridle.conf  hyprland-greeter.conf  hyprland.conf  hyprlock-1080p.conf  hyprlock.conf  monitors.conf  workspaces.conf
private_dot_config/i3/: config
private_dot_config/i3status/: config_linux
private_dot_config/kitty/: keybinds.conf  options.conf  theme.conf
private_dot_config/lazygit/: config.yml
private_dot_config/mise/: config.toml  config.toml.tmpl
private_dot_config/nvim/: coc-settings.json  init.lua  init.old.vim  init.vim
private_dot_config/picom/: picom.conf
private_dot_config/quickshell/: .clangd  .qmlls.ini  (+8 more)
private_dot_config/quickshell/plugin/: CMakeLists.txt  build.sh
private_dot_config/quickshell/plugin/src/audio/: audiospectrum.cpp  audiospectrum.hpp
private_dot_config/quickshell/plugin/src/common/: directories.cpp  directories.hpp  persistent.cpp  persistent.hpp
private_dot_config/quickshell/plugin/src/config/: appearance.cpp  appearance.hpp
private_dot_config/quickshell/plugin/src/db/: sqlite.cpp  sqlite.hpp
private_dot_config/quickshell/plugin/src/hyprland/: hyprlandworkspace.cpp  hyprlandworkspace.hpp
private_dot_config/quickshell/plugin/src/launcher/: appsearch.cpp  appsearch.hpp
private_dot_config/quickshell/plugin/src/missioncontrol/: missioncontrolmodel.cpp  missioncontrolmodel.hpp
private_dot_config/quickshell/plugin/src/obsidian/: obsidiantodo.cpp  obsidiantodo.hpp
private_dot_config/quickshell/plugin/src/recorder/: screenrecorder.cpp  screenrecorder.hpp
private_dot_config/quickshell/plugin/src/system/: systeminfo.cpp  systeminfo.hpp
private_dot_config/quickshell/plugin/src/utils/: colors.cpp  colors.hpp  files.cpp  files.hpp  fuzzysort.cpp  fuzzysort.hpp  jsonvalidator.cpp  jsonvalidator.hpp  levendist.cpp  levendist.hpp  strings.cpp  strings.hpp
scripts/: cht  corona  executable_count_commits.rb  executable_currency_converter  executable_current_wallpaper  executable_daily_tokens  executable_daily_tokens_status  executable_download_and_install_nerd_fonts  executable_download_and_patch_iosevka  executable_mv_sym_bin.sh  executable_read_currency_converter_cache  executable_record_current_monitor  executable_switch-theme-mode  executable_wakatime_session  executable_wakatime_session.sh  executable_wakatime_status  executable_wakatime_status.sh  executable_weather  mv_sc.sh
(+533 files in other folders)
